Bug 1425996 - fix build error: unused variable 'rv'. r=gerald

MozReview-Commit-ID: 7MhsSWbxB3z

--HG--
extra : rebase_source : 81207a1e5b663314295f2f95afd4b726ffe8f12d