media/webrtc/signaling/src/mediapipeline/MediaPipeline.cpp
@@ -215,6 +215,7 @@ public:
         forceBlack);
     nsresult rv = mTaskQueue->Dispatch(runnable.forget());
     MOZ_DIAGNOSTIC_ASSERT(NS_SUCCEEDED(rv));
+    Unused << rv;
   }
 
   void AddListener(VideoConverterListener* aListener)
